fix: remove mobile scrollbar

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -19,4 +19,8 @@
   * {
     @apply uppercase !important;
   }
+
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
 }
